--- a/crypto_clustering.ipynb
+++ b/crypto_clustering.ipynb
@@ -3140,9 +3140,9 @@
    ],
    "source": [
     "# Use get_dummies() to create variables for text features.\n",
-    "X = pd.get_dummies(crypto_df, columns = [\"Algorithm\", \"ProofType\"])\n",
-    "print(X.shape)\n",
-    "X.head(10)"
+    "CC = pd.get_dummies(crypto_df, columns = [\"Algorithm\", \"ProofType\"])\n",
+    "print(CC.shape)\n",
+    "CC.head(10)"
    ]
   },
   {
@@ -3176,8 +3176,8 @@
    ],
    "source": [
     "# Standardize the data with StandardScaler().\n",
-    "X_scaled = StandardScaler().fit_transform(X)\n",
-    "X_scaled"
+    "CC_scaled = StandardScaler().fit_transform(CC)\n",
+    "CC_scaled"
    ]
   },
   {
@@ -3190,24 +3190,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b64b99ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.33725836,  1.08469479, -0.50244065],\n",
+       "       [-0.32060628,  1.08445617, -0.50281119],\n",
+       "       [ 2.30008444,  1.57805527, -0.64255618],\n",
+       "       ...,\n",
+       "       [ 0.32249612, -2.33418705,  0.38565757],\n",
+       "       [-0.16277659, -2.1258229 ,  0.30708126],\n",
+       "       [-0.29628856,  0.75052905, -0.24540378]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using PCA to reduce dimension to three principal components.\n",
-    "# YOUR CODE HERE"
+    "pca = PCA(n_components = 3)\n",
+    "CC_pca = pca.fit_transform(CC_scaled)\n",
+    "CC_pca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5478bb14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(532, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>-0.337258</td>\n",
+       "      <td>1.084695</td>\n",
+       "      <td>-0.502441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>-0.320606</td>\n",
+       "      <td>1.084456</td>\n",
+       "      <td>-0.502811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1337</th>\n",
+       "      <td>2.300084</td>\n",
+       "      <td>1.578055</td>\n",
+       "      <td>-0.642556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BTC</th>\n",
+       "      <td>-0.135345</td>\n",
+       "      <td>-1.289768</td>\n",
+       "      <td>0.139369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ETH</th>\n",
+       "      <td>-0.153779</td>\n",
+       "      <td>-2.035882</td>\n",
+       "      <td>0.371268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LTC</th>\n",
+       "      <td>-0.166681</td>\n",
+       "      <td>-1.084138</td>\n",
+       "      <td>0.026195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DASH</th>\n",
+       "      <td>-0.398448</td>\n",
+       "      <td>1.255894</td>\n",
+       "      <td>-0.488464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XMR</th>\n",
+       "      <td>-0.141769</td>\n",
+       "      <td>-2.189302</td>\n",
+       "      <td>0.421802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ETC</th>\n",
+       "      <td>-0.152223</td>\n",
+       "      <td>-2.036029</td>\n",
+       "      <td>0.371245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZEC</th>\n",
+       "      <td>-0.162776</td>\n",
+       "      <td>-2.125823</td>\n",
+       "      <td>0.307081</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           PC1       PC2       PC3\n",
+       "42   -0.337258  1.084695 -0.502441\n",
+       "404  -0.320606  1.084456 -0.502811\n",
+       "1337  2.300084  1.578055 -0.642556\n",
+       "BTC  -0.135345 -1.289768  0.139369\n",
+       "ETH  -0.153779 -2.035882  0.371268\n",
+       "LTC  -0.166681 -1.084138  0.026195\n",
+       "DASH -0.398448  1.255894 -0.488464\n",
+       "XMR  -0.141769 -2.189302  0.421802\n",
+       "ETC  -0.152223 -2.036029  0.371245\n",
+       "ZEC  -0.162776 -2.125823  0.307081"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a DataFrame with the three principal components.\n",
-    "# YOUR CODE HERE"
+    "pcs_df = pd.DataFrame(data = CC_pca, columns = [\"PC1\", \"PC2\", \"PC3\"], index=cryptonames_df.index)\n",
+    "print(pcs_df.shape)\n",
+    "pcs_df.head(10)"
    ]
   },
   {
